# ChatFAQ

./: .cursorignore  .editorconfig  .formatignore  .gitignore  .prettierrc  .readthedocs.yaml  BOOK_OF_FRUSTRATIONS.md  ChatFAQ.md  Dogefile  README.md  docker-compose.dev-network.yaml  docker-compose.vars.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements-doc.txt  snow.yml
api/: Makefile  manage.py  pyproject.toml
back/: .dockerignore  .env-template  .env_docker  .env_example  .gitignore  Dockerfile  Makefile  README.md  back.run.xml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  gpu.Dockerfile  install_python.sh  log-mem.sh  manage.py  model-w.toml  pmanage  pyproject.toml  run_local_ray_cluster.sh  run_local_ray_dev.sh  run_ray_head.sh  run_ray_worker.sh  sources.list  starter_script.sh
back/.celer.run/: Celery Worker.run.xml
back/.run/: Back Dev.run.xml  Back Gunicorn.run.xml  Back.run.xml  Celery Worker.run.xml  Django.run.xml  README.md
back/back/: README.md
back/back/apps/: README.md  urls.py
back/back/common/: README.md  serializer_fields.py  serializers.py  validators.py  views.py
back/back/config/: README.md  __init__.py  asgi.py  celery.py  middelware.py  routing.py  settings.py  storage_backends.py  urls.py  wsgi.py
back/back/utils/: README.md  __init__.py  auth.py  celery.py  custom_channel_layer.py  custom_channels.py  initial_snapshot.py  logging_formatters.py  ray_connection.py  ray_utils.py  spectacular_postprocessing_hooks.py
back/bdd/: .gitignore  README.md  conftest.py  hooks.py  test_features.py  test_utils.py
back/bdd/features/: README.md  smoke-test.feature
back/bdd/fixtures/: README.md  __init__.py  data.py  front.py  reporting.py  utils.py
back/bdd/report/: reporter.py  utils.py
back/bdd/step_definitions/: __init__.py  common_given.py  common_then.py  common_when.py  utils.py
back/doc/source/: conf.py  index.rst
back/riddler/apps/: urls.py
back/riddler/common/: consumers.py  models.py  serializer_fields.py  serializers.py  validators.py  views.py
back/riddler/config/: asgi.py  midderlware.py  routing.py  settings.py  urls.py  wsgi.py
back/riddler/utils/: __init__.py  custom_channel_layer.py  custom_channels.py  logging_formatters.py
chat_rag/: LICENSE  README.md  pyproject.toml  test.py
chat_rag/chat_rag/: README.md  __init__.py  async_rag.py  exceptions.py  rag.py
chat_rag/chat_rag/data/: README.md  models.py  parsers.py  splitters.py
chat_rag/chat_rag/embedding_models/: __init__.py  base_model.py  e5_model.py
chat_rag/chat_rag/inf_retrieval/: check_answ_questions.py  cross_encoder.py  query_generator.py  reference_checker.py  semantic_retriever.py
chat_rag/chat_rag/intent_detection/: README.md  __init__.py  clusterize_text.py  gen_intent.py
chat_rag/chat_rag/llms/: README.md  __init__.py  base_llm.py  claude_client.py  format_tools.py  gemini_client.py  ggml_llm.py  hf_llm.py  message.py  mistral_client.py  openai_client.py  rag_llm.py  together_client.py  types.py  vllm_client.py
chat_rag/chat_rag/retrievers/: __init__.py  bm25_retriever.py  colbert_retriever.py  rerank_retriever.py  retriever_client.py  semantic_retriever.py
chat_rag/chat_rag/utils/: check_answ_questions.py  gen_question.py  reference_checker.py  reranker.py
chatfaq-retrieval/: README.md  pyproject.toml
chatfaq-retrieval-server/: .dockerignore  .env-template  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
chatfaq-retrieval-server/chatfaq_retrieval_server/apps/: urls.py
chatfaq-retrieval-server/chatfaq_retrieval_server/config/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
chatfaq-retrieval-server/chatfaq_retrieval_server/utils/: __init__.py
chatfaq-retrieval/chatfaq_retrieval/: __init__.py
chatfaq-retrieval/chatfaq_retrieval/data/: models.py  parsers.py  splitters.py
chatfaq-retrieval/chatfaq_retrieval/inf_retrieval/: retriever.py
chatfaq-retrieval/chatfaq_retrieval/models/: __init__.py  base_model.py  ggml_model.py  hf_model.py  openai_model.py  vllm_model.py
chatfaq-retrieval/chatfaq_retrieval/prompt_generator/: prompt_generator.py
cli/: .gitignore  Makefile  README.md  chatfaq  pyproject.toml
cli/chatfaq_cli/: __init__.py  __main__.py  chatfaq
cli/chatfaq_cli/config/: README.md  __init__.py
cli/chatfaq_cli/conversations/: README.md
cli/chatfaq_cli/data/: README.md  __init__.py  auto_generated_titles.py  intents.py  knowledge_bases.py  knowledge_items.py  titles.py  utils.py
cli/chatfaq_cli/datasets/: __init__.py  items.py  utterances.py
cli/chatfaq_cli/helpers/: README.md  __init__.py
cli/chatfaq_cli/knowledge_bases/: __init__.py  auto_generated_titles.py  knowledge_items.py
cli/chatfaq_cli/models/: __init__.py
cli/chatfaq_cli/rag_pipeline/: README.md  __init__.py  generation_config.py  llm_config.py  prompt_config.py  rag_config.py  retriever_config.py
cli/chatfaq_cli/reviews/: README.md
cli/chatfaq_cli/senders/: README.md  __init__.py
cli/cli/: __init__.py
cli/cli/config/: __init__.py
cli/cli/conversations/: __init__.py
cli/cli/datasets/: __init__.py  items.py  utterances.py
cli/cli/helpers/: __init__.py
cli/cli/models/: __init__.py
cli/cli/reviews/: __init__.py
sdk/: .dockerignore  .env-template  .env_docker  .env_example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  sdk.run.xml
sdk/.run/: Riddler.run.xml  SDK.run.xml  sdk.run.xml
sdk/chatfaq_sdk/: __init__.py  utils.py
sdk/chatfaq_sdk/api/: messages.py  retrieval.py
sdk/chatfaq_sdk/clients/: __init__.py  agent.py
sdk/chatfaq_sdk/conditions/: __init__.py
sdk/chatfaq_sdk/data_source_parsers/: __init__.py
sdk/chatfaq_sdk/fsm/: __init__.py
sdk/chatfaq_sdk/layers/: __init__.py
sdk/chatfaq_sdk/types/: __init__.py  messages.py
sdk/doc/source/: conf.py  index.rst
sdk/examples/: .env_example  __init__.py  fsm_def.py
sdk/examples/agent_example/: __init__.py  __main__.py  fsm_definition.py
sdk/examples/feedbacks_example/: __init__.py  __main__.py  (+1 more)
sdk/riddler_sdk/: __init__.py  settings.py
sdk/tests/: __init__.py  fsm_def.py
(+818 files in other folders)
