[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Hector Soria <hector.soria@with-madrid.com>"]
license = "Proprietary"

packages = [
    {include = "back"},
]

[tool.poetry.dependencies]
python = "~3.11"
modelw-preset-django = "2024.10.0"
drf-spectacular = {extras = ["sidecar"], version = "^0.24.0"}
channels = "*"
daphne = "*"
Django = "*"
django-cors-headers = "^3.13.0"
django-extensions = "^3.2.1"
django-better-admin-arrayfield = "^1.4.2"
typefit = "^0.4.2"
requests = "^2.28.1"
python-json-logger = "^2.0.4"
psycopg2 = "*"
whitenoise = "*"
python-dotenv = "^0.21.0"
httpx = "0.25.2"
myst-parser = "^0.18.1"
django-rest-knox = "^4.2.0"
pgvector = "^0.2.3"
django-filter = "^23.2"
django-storages = "*"
sqlalchemy = "^2.0.16"
gevent = "23.9.0"
boto3 = "^1.26.161"
djfernet = "^0.8.1"
scrapy = "^2.10.0"
scrapy-playwright = "^0.0.28"
undetected-playwright = "^0.1.0"
django-simple-history = "~3.3.0"
crochet = "^2.1.1"
ray = {extras = ["data", "serve"], version = "2.40.0"}
pillow = "^11.1.0"
redis = "~5.1"
fastapi = "0.111"
memray = "^1.12.0"
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"
chat-rag = "0.2.9"
channels-redis = "^4.2.1"
PyMuPDF = "^1.25.1"


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
ipython = "*"

[tool.poetry.group.doc.dependencies]
sphinx = "<6"

[tool.isort]
profile = "black"
known_first_party = "back"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "explicit"
