[tool.poetry]
name = "chat-rag"
version = "0.1.65"
description = ""
authors = ["Diego Peláez Paquico <diego.pelaez@with-madrid.com>"]
readme = "README.md"
packages = [{ include = "chat_rag" }]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
numpy = "1.23.5"
pandas = "1.4.4"
tqdm = "^4.65.0"
pyarrow = "^12.0.0"
pillow = "^10.1.0"
certifi = "^2023.7.22"
urllib3 = "^1.26.18"
aiohttp = "^3.8.5"
cryptography = "^41.0.4"
torch = "^2.1.0"
transformers = "^4.38.2"
sentence-transformers = "^2.3.0"
ctransformers = "^0.2.10"
einops = "^0.6.1"
accelerate = "^0.21.0"
autoawq = "0.1.7"
unstructured = {extras = ["pdf"], version = "0.12.0", python = ">=3.10,<3.12"}
unstructured-inference = "0.7.21"
torchvision = "0.16.0"
openai = "^1.3.4"
anthropic = "0.18.1"
mistralai = "0.0.9"
protobuf = "3.20.2"
ragatouille = "^0.0.8.post2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
