[tool.poetry]
name = "chatfaq-retrieval"
version = "0.1.7"
description = ""
authors = ["Diego Peláez Paquico <diego.pelaez@with-madrid.com>"]
readme = "README.md"
packages = [{include = "chatfaq_retrieval"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.23.5"
pandas = "1.4.4"
torch = "1.13.1"
transformers = "^4.29.2"
sentence-transformers = "^2.2.2"
pyarrow = "^12.0.0"
accelerate = "^0.19.0"
bitsandbytes = "^0.39.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
secondary = true
