[tool.poetry]
name = "chatfaq-retrieval"
version = "0.1.8"
description = ""
authors = ["Diego Peláez Paquico <diego.pelaez@with-madrid.com>"]
readme = "README.md"
packages = [{include = "chatfaq_retrieval"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.23.5"
pandas = "1.4.4"
transformers = "^4.29.2"
sentence-transformers = "^2.2.2"
pyarrow = "^12.0.0"
accelerate = "^0.19.0"
python-dotenv = "^0.21.0"


[tool.poetry.group.cpu]

[tool.poetry.group.cpu.dependencies]
torch = { url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.0%2Bcpu.cxx11.abi-cp310-cp310-linux_x86_64.whl"}

# [tool.poetry.group.gpu]

# [tool.poetry.group.gpu.dependencies]
# torch = "1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
secondary = true
