[tool.poetry]
name = "cli"
version = "0.1.0"
description = ""
authors = ["Hector Soria <hector.soria@with-madrid.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
fire = "^0.5.0"
requests = "^2.30.0"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
