[tool.poetry]
name = "chatfaq_sdk"
version = "0.1.3"
description = "ChatFAQ SDK"
authors = ["Hector Soria <hector.soria@with-madrid.com>"]
readme = "README.md"

packages = [
    { include = "chatfaq_sdk" },
]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
websockets = "^10.4"
coloredlogs = "^15.0.1"
python-dotenv = "^0.21.1"
ir-qa-dev = "^0.1.17"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
secondary = true
